...
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Configuration" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qjk-mC-3ls">
                                                    <rect key="frame" x="156" y="22" width="102" height="21"/>
                                                    <constraints>
...
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Page tracking" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CF0-aM-EI9">
                                                    <rect key="frame" x="155.66666666666666" y="22" width="102.99999999999997" height="21"/>
                                                    <constraints>
...
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Action" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zHH-Xa-hYF">
                                                    <rect key="frame" x="183" y="22" width="48" height="21"/>
                                                    <constraints>
...
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Campaign" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8b9-SR-dSQ">
                                                    <rect key="frame" x="168.66666666666666" y="22" width="77" height="21"/>
                                                    <constraints>
...
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Ecommerce" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="drs-3z-O0K">
                                                    <rect key="frame" x="161.66666666666666" y="22" width="91" height="21"/>
                                                    <constraints>
...
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="WebView" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qSq-z9-Tj0">
                                                    <rect key="frame" x="172" y="22" width="70" height="21"/>
                                                    <constraints>
...
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Mapp Intelligence demo" id="l9b-7e-T1V"/>
                </tableViewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="7U2-zs-eKB" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
...
                                    <constraint firstAttribute="height" constant="50" id="nF4-py-edb"/>
                                </constraints>
                                <state key="normal" title="Opt out">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
...
                                    <constraint firstAttribute="height" constant="50" id="ghV-YM-AuX"/>
                                </constraints>
                                <state key="normal" title="Opt in">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
...
                                    <constraint firstAttribute="height" constant="50" id="PNI-X5-u7s"/>
                                </constraints>
                                <state key="normal" title="Reset">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
...
                                    <constraint firstAttribute="height" constant="50" id="nN6-kI-9IB"/>
                                </constraints>
                                <state key="normal" title="Init with everID">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
...
                                    <constraint firstAttribute="height" constant="50" id="KCf-Tx-0hR"/>
                                </constraints>
                                <state key="normal" title="Init at Runtime">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
...
                                    <constraint firstAttribute="height" constant="50" id="WgD-oc-pEZ"/>
                                </constraints>
                                <state key="normal" title="UserMatching set to true">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
...
                                    <constraint firstAttribute="height" constant="50" id="yFM-bB-O6D"/>
                                </constraints>
                                <state key="normal" title="Track Page">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
...
                                    <constraint firstAttribute="height" constant="50" id="O4E-Kr-Jgs"/>
                                </constraints>
                                <state key="normal" title="Track Custom Page">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
